--- a/test/Simulated_American_put_option.ipynb
+++ b/test/Simulated_American_put_option.ipynb
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -621,17 +621,17 @@
     "R_2 = [2.2184871774693207, 1.982405729906309, 1.388182640938809, 0.5914758674615203, 0.0]\n",
     "R_2std = [0.48161858757018616, 0.4207036224782811, 0.29009492171907864, 0.28388833119104995, 0.0]\n",
     "\n",
-    "plt.plot(PROB, R1, linewidth=2.5, markersize=7, marker = 'o', label = r'VA-DRVI-TV ($\\rho = 0.2$)')\n",
+    "plt.plot(PROB, R1, linewidth=2.5, markersize=7, marker = 'o', label = r'VA-DRPVI ($\\rho = 0.2$)')\n",
     "plt.fill_between(PROB, np.array(R1) - np.array(R_std), np.array(R1) + np.array(R_std), alpha=0.2)\n",
     "\n",
-    "plt.plot(PROB, R_2, linewidth=2.5, markersize=7, marker = 'o', label = r'VA-SDRVI-TV ($\\lambda = 1$)')\n",
+    "plt.plot(PROB, R_2, linewidth=2.5, markersize=7, marker = 'o', label = r'VA-R2PVI-TV ($\\lambda = 1$)')\n",
     "plt.fill_between(PROB, np.array(R_2) - np.array(R_2std), np.array(R_2) + np.array(R_2std), alpha=0.2)\n",
     "\n",
     "plt.grid(alpha = 0.3)\n",
     "plt.legend(fontsize=16)\n",
     "plt.xlabel('price-up probability', size=16)\n",
     "plt.ylabel('Average Reward', size=16)\n",
-    "plt.savefig(f'2.pdf', dpi=1000, bbox_inches='tight', pad_inches=0.0)"
+    "#plt.savefig(f'2.pdf', dpi=1000, bbox_inches='tight', pad_inches=0.0)"
    ]
   }
  ],
