--- a/test/Simulated_Linear_MDP.ipynb
+++ b/test/Simulated_Linear_MDP.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -843,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -868,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -922,25 +922,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
+     "ename": "TypeError",
+     "evalue": "train_once_SRPVI_KL() got an unexpected keyword argument 'Rho'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[159], line 25\u001b[0m\n\u001b[1;32m     23\u001b[0m Offline_Dataset \u001b[38;5;241m=\u001b[39m Offline_Dataset_Collection(T1, env, seed\u001b[38;5;241m=\u001b[39mrep)\n\u001b[1;32m     24\u001b[0m agent \u001b[38;5;241m=\u001b[39m train_once(dataset\u001b[38;5;241m=\u001b[39mOffline_Dataset, action_space\u001b[38;5;241m=\u001b[39maction_space, beta\u001b[38;5;241m=\u001b[39mbeta, H\u001b[38;5;241m=\u001b[39mH, lam\u001b[38;5;241m=\u001b[39mlam, fail_state\u001b[38;5;241m=\u001b[39mfail_state)\n\u001b[0;32m---> 25\u001b[0m DR_agent \u001b[38;5;241m=\u001b[39m train_once_DR(dataset\u001b[38;5;241m=\u001b[39mOffline_Dataset, action_space\u001b[38;5;241m=\u001b[39maction_space, beta\u001b[38;5;241m=\u001b[39mbeta, H\u001b[38;5;241m=\u001b[39mH, lam\u001b[38;5;241m=\u001b[39mlam, Rho\u001b[38;5;241m=\u001b[39mRho, theta\u001b[38;5;241m=\u001b[39menv\u001b[38;5;241m.\u001b[39mtheta, fail_state\u001b[38;5;241m=\u001b[39mfail_state)\n\u001b[1;32m     26\u001b[0m \u001b[38;5;66;03m#VA_DR_agent = train_once_DR_VA(pre_agent=DR_agent, dataset=Offline_Dataset, action_space=action_space, beta=beta, H=H, lam=lam, Rho=Rho, theta=env.theta, fail_state=fail_state)\u001b[39;00m\n\u001b[1;32m     28\u001b[0m SRPVI_TV_agent \u001b[38;5;241m=\u001b[39m train_once_SRPVI_TV(dataset\u001b[38;5;241m=\u001b[39mOffline_Dataset, action_space\u001b[38;5;241m=\u001b[39maction_space, beta\u001b[38;5;241m=\u001b[39mbeta, H\u001b[38;5;241m=\u001b[39mH, lam\u001b[38;5;241m=\u001b[39mlam, rho\u001b[38;5;241m=\u001b[39mrho, theta\u001b[38;5;241m=\u001b[39menv\u001b[38;5;241m.\u001b[39mtheta, fail_state\u001b[38;5;241m=\u001b[39mfail_state)\n",
-      "Cell \u001b[0;32mIn[156], line 8\u001b[0m, in \u001b[0;36mtrain_once_DR\u001b[0;34m(dataset, action_space, beta, H, lam, Rho, theta, fail_state)\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mtrain_once_DR\u001b[39m(dataset, action_space, beta, H, lam, Rho, theta, fail_state):\n\u001b[1;32m      7\u001b[0m     agent \u001b[38;5;241m=\u001b[39m DR_LSVI_LCB(A\u001b[38;5;241m=\u001b[39maction_space, beta\u001b[38;5;241m=\u001b[39mbeta, H\u001b[38;5;241m=\u001b[39mH, lam\u001b[38;5;241m=\u001b[39mlam, dataset\u001b[38;5;241m=\u001b[39mdataset, Rho\u001b[38;5;241m=\u001b[39mRho, theta\u001b[38;5;241m=\u001b[39mtheta, fail_state\u001b[38;5;241m=\u001b[39mfail_state)\n\u001b[0;32m----> 8\u001b[0m     agent\u001b[38;5;241m.\u001b[39mupdate_Q()\n\u001b[1;32m      9\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m agent\n",
-      "Cell \u001b[0;32mIn[154], line 159\u001b[0m, in \u001b[0;36mDR_LSVI_LCB.update_Q\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    157\u001b[0m     w_h \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtheta[h]\n\u001b[1;32m    158\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m--> 159\u001b[0m     nu_h \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mget_nu_h(h, rho\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mRho[h])\n\u001b[1;32m    160\u001b[0m     w_h \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtheta[h] \u001b[38;5;241m+\u001b[39m nu_h\n\u001b[1;32m    161\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mw[h] \u001b[38;5;241m=\u001b[39m w_h\n",
-      "Cell \u001b[0;32mIn[154], line 141\u001b[0m, in \u001b[0;36mDR_LSVI_LCB.get_nu_h\u001b[0;34m(self, h, rho)\u001b[0m\n\u001b[1;32m    139\u001b[0m         z \u001b[38;5;241m=\u001b[39m Lambda_h_inverse \u001b[38;5;241m@\u001b[39m Phi_h\u001b[38;5;241m.\u001b[39mT \u001b[38;5;241m@\u001b[39m np\u001b[38;5;241m.\u001b[39mminimum(V_h_plus_one, alpha)\n\u001b[1;32m    140\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;241m-\u001b[39mz[i] \u001b[38;5;241m+\u001b[39m rho[i] \u001b[38;5;241m*\u001b[39m alpha\n\u001b[0;32m--> 141\u001b[0m     result \u001b[38;5;241m=\u001b[39m minimize(z_alpha_i, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mH\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m2\u001b[39m, method\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mNelder-Mead\u001b[39m\u001b[38;5;124m'\u001b[39m, bounds\u001b[38;5;241m=\u001b[39m[(\u001b[38;5;241m0\u001b[39m, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mH)])\n\u001b[1;32m    142\u001b[0m     nu_h[i] \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m-\u001b[39m result\u001b[38;5;241m.\u001b[39mfun\n\u001b[1;32m    143\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m nu_h\n",
-      "File \u001b[0;32m~/miniconda3/envs/new_env/lib/python3.11/site-packages/scipy/optimize/_minimize.py:698\u001b[0m, in \u001b[0;36mminimize\u001b[0;34m(fun, x0, args, method, jac, hess, hessp, bounds, constraints, tol, callback, options)\u001b[0m\n\u001b[1;32m    695\u001b[0m callback \u001b[38;5;241m=\u001b[39m _wrap_callback(callback, meth)\n\u001b[1;32m    697\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m meth \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnelder-mead\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[0;32m--> 698\u001b[0m     res \u001b[38;5;241m=\u001b[39m _minimize_neldermead(fun, x0, args, callback, bounds\u001b[38;5;241m=\u001b[39mbounds,\n\u001b[1;32m    699\u001b[0m                                \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39moptions)\n\u001b[1;32m    700\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m meth \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpowell\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[1;32m    701\u001b[0m     res \u001b[38;5;241m=\u001b[39m _minimize_powell(fun, x0, args, callback, bounds, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39moptions)\n",
-      "File \u001b[0;32m~/miniconda3/envs/new_env/lib/python3.11/site-packages/scipy/optimize/_optimize.py:924\u001b[0m, in \u001b[0;36m_minimize_neldermead\u001b[0;34m(func, x0, args, callback, maxiter, maxfev, disp, return_all, initial_simplex, xatol, fatol, adaptive, bounds, **unknown_options)\u001b[0m\n\u001b[1;32m    922\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m bounds \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m    923\u001b[0m     xr \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mclip(xr, lower_bound, upper_bound)\n\u001b[0;32m--> 924\u001b[0m fxr \u001b[38;5;241m=\u001b[39m func(xr)\n\u001b[1;32m    925\u001b[0m doshrink \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[1;32m    927\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m fxr \u001b[38;5;241m<\u001b[39m fsim[\u001b[38;5;241m0\u001b[39m]:\n",
-      "File \u001b[0;32m~/miniconda3/envs/new_env/lib/python3.11/site-packages/scipy/optimize/_optimize.py:620\u001b[0m, in \u001b[0;36m_wrap_scalar_function_maxfun_validation.<locals>.function_wrapper\u001b[0;34m(x, *wrapper_args)\u001b[0m\n\u001b[1;32m    618\u001b[0m ncalls[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[1;32m    619\u001b[0m \u001b[38;5;66;03m# A copy of x is sent to the user function (gh13740)\u001b[39;00m\n\u001b[0;32m--> 620\u001b[0m fx \u001b[38;5;241m=\u001b[39m function(np\u001b[38;5;241m.\u001b[39mcopy(x), \u001b[38;5;241m*\u001b[39m(wrapper_args \u001b[38;5;241m+\u001b[39m args))\n\u001b[1;32m    621\u001b[0m \u001b[38;5;66;03m# Ideally, we'd like to a have a true scalar returned from f(x). For\u001b[39;00m\n\u001b[1;32m    622\u001b[0m \u001b[38;5;66;03m# backwards-compatibility, also allow np.array([1.3]),\u001b[39;00m\n\u001b[1;32m    623\u001b[0m \u001b[38;5;66;03m# np.array([[1.3]]) etc.\u001b[39;00m\n\u001b[1;32m    624\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m np\u001b[38;5;241m.\u001b[39misscalar(fx):\n",
-      "File \u001b[0;32m~/miniconda3/envs/new_env/lib/python3.11/site-packages/numpy/lib/function_base.py:962\u001b[0m, in \u001b[0;36mcopy\u001b[0;34m(a, order, subok)\u001b[0m\n\u001b[1;32m    873\u001b[0m \u001b[38;5;129m@array_function_dispatch\u001b[39m(_copy_dispatcher)\n\u001b[1;32m    874\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcopy\u001b[39m(a, order\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mK\u001b[39m\u001b[38;5;124m'\u001b[39m, subok\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m):\n\u001b[1;32m    875\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    876\u001b[0m \u001b[38;5;124;03m    Return an array copy of the given object.\u001b[39;00m\n\u001b[1;32m    877\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    960\u001b[0m \n\u001b[1;32m    961\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 962\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m array(a, order\u001b[38;5;241m=\u001b[39morder, subok\u001b[38;5;241m=\u001b[39msubok, copy\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 30\u001b[0m\n\u001b[1;32m     26\u001b[0m \u001b[38;5;66;03m#VA_DR_agent = train_once_DR_VA(pre_agent=DR_agent, dataset=Offline_Dataset, action_space=action_space, beta=beta, H=H, lam=lam, Rho=Rho, theta=env.theta, fail_state=fail_state)\u001b[39;00m\n\u001b[1;32m     28\u001b[0m SRPVI_TV_agent \u001b[38;5;241m=\u001b[39m train_once_SRPVI_TV(dataset\u001b[38;5;241m=\u001b[39mOffline_Dataset, action_space\u001b[38;5;241m=\u001b[39maction_space, beta\u001b[38;5;241m=\u001b[39mbeta, H\u001b[38;5;241m=\u001b[39mH, lam\u001b[38;5;241m=\u001b[39mlam, rho\u001b[38;5;241m=\u001b[39mrho, theta\u001b[38;5;241m=\u001b[39menv\u001b[38;5;241m.\u001b[39mtheta, fail_state\u001b[38;5;241m=\u001b[39mfail_state)\n\u001b[0;32m---> 30\u001b[0m SRPVI_KL_agent \u001b[38;5;241m=\u001b[39m train_once_SRPVI_KL(dataset\u001b[38;5;241m=\u001b[39mOffline_Dataset, action_space\u001b[38;5;241m=\u001b[39maction_space, beta\u001b[38;5;241m=\u001b[39mbeta, H\u001b[38;5;241m=\u001b[39mH, lam\u001b[38;5;241m=\u001b[39mlam, Rho\u001b[38;5;241m=\u001b[39mRho, theta\u001b[38;5;241m=\u001b[39menv\u001b[38;5;241m.\u001b[39mtheta, fail_state\u001b[38;5;241m=\u001b[39mfail_state)\n\u001b[1;32m     31\u001b[0m SRPVI_xi2_agent \u001b[38;5;241m=\u001b[39m train_once_SRPVI_xi2(dataset\u001b[38;5;241m=\u001b[39mOffline_Dataset, action_space\u001b[38;5;241m=\u001b[39maction_space, beta\u001b[38;5;241m=\u001b[39mbeta, H\u001b[38;5;241m=\u001b[39mH, lam\u001b[38;5;241m=\u001b[39mlam, Rho\u001b[38;5;241m=\u001b[39mRho, theta\u001b[38;5;241m=\u001b[39menv\u001b[38;5;241m.\u001b[39mtheta, fail_state\u001b[38;5;241m=\u001b[39mfail_state)\n\u001b[1;32m     32\u001b[0m agent_dic[\u001b[38;5;28mstr\u001b[39m(rep)] \u001b[38;5;241m=\u001b[39m agent\n",
+      "\u001b[0;31mTypeError\u001b[0m: train_once_SRPVI_KL() got an unexpected keyword argument 'Rho'"
      ]
     }
    ],
@@ -1086,7 +1079,21 @@
     "        DR_LSVI_LCB_std.append(np.std(REWARD_DR))\n",
     "        SRPVI_TV_std.append(np.std(REWARD_SRPVI_TV))\n",
     "        SRPVI_KL_std.append(np.std(REWARD_SRPVI_KL))\n",
-    "        SRPVI_xi2_std.append(np.std(REWARD_SRPVI_xi2))\n"
+    "        SRPVI_xi2_std.append(np.std(REWARD_SRPVI_xi2))\n",
+    "\n",
+    "plt.plot(Perturbation, R_LSVI_LCB, label = 'PEVI', marker = 'D', color = 'gray')\n",
+    "#plt.fill_between(Perturbation, np.array(R_LSVI_LCB) - np.array(LSVI_LCB_std), np.array(R_LSVI_LCB) + np.array(LSVI_LCB_std), alpha=0.15)\n",
+    "plt.plot(Perturbation, R_SRPVI_TV, label = 'R2PVI-TV', marker = 'X')\n",
+    "#plt.fill_between(Perturbation, np.array(R_SRPVI_TV) - np.array(SRPVI_TV_std), np.array(R_SRPVI_TV) + np.array(SRPVI_TV_std), alpha=0.15)\n",
+    "plt.plot(Perturbation, R_SRPVI_KL, label = 'R2PVI-KL', marker = 'D')\n",
+    "#plt.fill_between(Perturbation, np.array(R_SRPVI_KL) - np.array(SRPVI_KL_std), np.array(R_SRPVI_KL) + np.array(SRPVI_KL_std), alpha=0.15)\n",
+    "plt.plot(Perturbation, R_SRPVI_xi2, label = r'R2PVI-$\\chi^2$', marker = 'o', color = 'lightblue')\n",
+    "#plt.fill_between(Perturbation, np.array(R_SRPVI_xi2) - np.array(SRPVI_xi2_std), np.array(R_SRPVI_xi2) + np.array(SRPVI_xi2_std), alpha=0.15)\n",
+    "plt.legend(fontsize=16)\n",
+    "plt.grid(alpha=0.3)\n",
+    "plt.xlabel('Perturbation', size=16)\n",
+    "plt.ylabel('Average reward', size=16)\n",
+    "plt.savefig(f'compare_{delta}_{xi_norm}_{rho}.pdf', dpi=1000, bbox_inches='tight', pad_inches=0.0)"
    ]
   },
   {
